--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c"
-                       INCLUDE_DIRS ".")
+idf_component_register(SRCS "main.c" "epd_driver.c" "graphics.c" "font.c"
+                       INCLUDE_DIRS "."
+                       PRIV_REQUIRES esp_driver_spi esp_driver_gpio)
