--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.c" "epd_driver.c" "graphics.c" "font.c"
+idf_component_register(SRCS "display.c" "utf8.c" "main.c" "epd_driver.c" "graphics.c" "font.c"
                        INCLUDE_DIRS "."
                        PRIV_REQUIRES esp_driver_spi esp_driver_gpio)
