--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,8 +1,6 @@
-idf_component_register(SRCS "display_epaper/display.c"
-                            "display_epaper/utf8.c"
-                            "display_epaper/graphics.c"
-                            "display_epaper/driver/epd_driver_gdew0102t4.c"
-                            "display_epaper/fonts/font.c"
-                            "main.c"
-                       INCLUDE_DIRS "." "display_epaper" "display_epaper/driver" "display_epaper/fonts"
-                       PRIV_REQUIRES esp_driver_spi esp_driver_gpio)
+idf_component_register(
+  SRC_DIRS "." "display_epaper" "display_epaper/driver" "display_epaper/fonts" "system_state" "wifi" "ota_update" "battery_level"
+  INCLUDE_DIRS "."
+  EMBED_TXTFILES "ota_update/cert.pem"
+  PRIV_REQUIRES driver esp_wifi esp_netif esp_http_client nvs_flash app_update esp_https_ota esp_adc mbedtls esp_driver_spi esp_driver_gpio
+)
